--- a/views/layout.haml
+++ b/views/layout.haml
@@ -12,55 +12,52 @@
     %link{:rel => "openid.delegate", :href => "http://toolmantim.myopenid.com"}/
 
   %body{:class => @body_class}
-    - unless @hide_skip_nav
-      #top
-        %p
-          %a{:href => "#about"} Skip to navigation
+    #body-inner
+      - unless @hide_skip_nav
+        #top
+          %p
+            %a{:href => "#about"} Skip to navigation
   
-    = yield
+      = yield
 
-    #about
-      %h1
-        %span
-        %a{:href => "/", :title => "Home"} toolmantim
+      #about
+        %h1
+          %a{:href => "/", :title => "Home"}
+            %span
+            toolmantim
 
-      %ul
-        %li
-          %a{:href => "/articles"} Articles
-        %li
-          %a{:href => "/projects"} Projects
+        %p.intro
+          I'm <strong>Tim Lucas</strong>, a web app designer and developer currently in Sydney&nbsp;Australia.
+
+        %p.blurb
+          I run the <strong>web&nbsp;application design and development</strong> company <a
+          href="http://agencyrainford.com/">Agency&nbsp;Rainford</a>, <a
+          href="http://www.slideshare.net/toolmantim/">present</a> on various
+          technical topics, <a href="http://flickr.com/photos/toolmantim">snap the
+          occasional photo</a>, <a href="http://twitter.com/toolmantim">tweet</a>
+          my going-ons, share <a href="http://github.com/toolmantim">teh codes</a>
+          and post other tid-bits to the&nbsp;<a
+          href="http://tumble.toolmantim.com/">tumble</a>.
+
+        %p.recent
+          Most recently I published
+          %a{:href => article_path(@articles.first)}= @articles.first.title
+          == (#{@articles.first.published.strftime("%B %d, %Y")})
+
+        %p.contact
+          Shoot an email to <span class="email">t.lucas@#{thisdomain}</span> and <strong>say&nbsp;hello</strong>.
       
-      %p.intro
-        I'm Tim Lucas, a web app designer and developer currently in Sydney&nbsp;Oz.
+        
+        %ul#navigation
+          %li
+            %a{:href => "/articles"} Articles &rarr;
+          %li
+            %a{:href => "/projects"} Projects &rarr;
 
-      %p.blurb
-        I run the web&nbsp;application design and development company <a
-        href="http://agencyrainford.com/">Agency Rainford</a>, <a
-        href="http://www.slideshare.net/toolmantim/">present</a> on various
-        technical topics, <a href="http://flickr.com/photos/toolmantim">snap the
-        occasional photo</a>, <a href="http://twitter.com/toolmantim">tweet</a>
-        my going-ons, share <a href="http://github.com/toolmantim">teh codes</a>
-        and post other tid-bits to the&nbsp;<a
-        href="http://tumble.toolmantim.com/">tumble</a>.
 
-      %p.recent
-        Most recently I published
-        %a{:href => article_path(@articles.first)}= @articles.first.title
-        on
-        %em== #{@articles.first.published.strftime("%d %B %y")}.
-
-      %p.nav
-        Browse <a href="/articles">previously published articles</a>
-        as well as <a href="/projects">recently launched&nbsp;projects</a>.
-
-      %p.contact
-        Shoot an email to <span class="email">t.lucas@#{thisdomain}</span> and say&nbsp;hello.
-      
-
-    %p.quip
-      Powered by
-      %a{:href => "http://github.com/toolmantim/toolmantim"}
-        %em= Quip.random
+      %p.quip
+        Powered by
+        %a{:href => "http://github.com/toolmantim/toolmantim"}= Quip.random
 
     - %w( jquery-1.2.6.min code_highlighter all ).each do |js|
       %script{:src => versioned_js(js), :type => "text/javascript"}
