Got the footer all sexy-like

--- a/views/home.haml
+++ b/views/home.haml
@@ -1,3 +1,9 @@
 - @page_title = "Tim Lucas - toolmantim.com"
 - @body_class = "home"
+
 - @hide_skip_nav = true
+- @hide_about = true
+
+= partial :site_header
+
+.meta= partial :meta
