Fix up heading spacings *heart's his gorgeous designer gal*

--- a/views/article.haml
+++ b/views/article.haml
@@ -1,7 +1,6 @@
 .article
   .about
-    %h1
-      %a{:href => article_path(@article)}= @article.title
+    %h1= @article.title
 
     %p.published
       Published
