--- a/views/stylesheets/screen.sass
+++ b/views/stylesheets/screen.sass
@@ -213,7 +213,7 @@ body.archive
   h1
     :font-size 1.8em
     :margin-top 2em
-    :margin-bottom 1em
+    :margin-bottom 0.5em
     :color = !very_bright_text
     
   .about
@@ -234,6 +234,7 @@ body.archive
   
   .content
     :font-family "Lucida Grande"
+    :margin-bottom 50px
   
     > *
       :width = !article_width
@@ -263,7 +264,7 @@ body.archive
       :width = !article_width
     
     h2
-      :font-size 1.8em
+      :font-size 1.6em
       :color = !dull_text
       :padding-bottom 0.1em
       :margin-top 2em
