--- a/views/stylesheets/screen.sass
+++ b/views/stylesheets/screen.sass
@@ -13,6 +13,20 @@
   
 =bell_gothic
   :font-family "Bell Gothic Std", arial, sans-serif
+  
+=big_white_heading
+  :font-size 1.8em
+  :color = !very_bright_text
+
+=highlight_link
+  :display block
+  :color = !standard_text
+  :padding 6px 10px 0px 10px
+  :background-color = !very_dull_text
+
+=highlight_link_hover
+  :color = !very_bright_text
+  :background-color = !dull_text
 
 / Site-wide element styles
 
@@ -57,6 +71,7 @@ body
   :text-indent -2000px
 
 #about
+  :clear both
   :background-color #393e44
   :-webkit-border-radius 5px
   :padding 20px 20px 15px 20px
@@ -67,7 +82,7 @@ body
   p.intro, #navigation
     :position absolute
     :left 20px
-    :width 350px
+    :width 400px
   
   p.intro
     :top 15px
@@ -86,7 +101,7 @@ body
     :line-height 1.8em
   
   p.blurb, p.recent, p.contact
-    :margin-left 350px
+    :margin-left 420px
     
   p.blurb, p.recent
     :margin-bottom 9px
@@ -116,14 +131,10 @@ h1.site-header
     :margin-right 10px
 
     a, a:active
-      :display block
-      :color = !standard_text
-      :padding 6px 10px 0px 10px
-      :background-color = !very_dull_text
-
+      +highlight_link
+    
     a:hover
-      :color = !very_bright_text
-      :background-color = !dull_text
+      +highlight_link_hover
 
 p.quip
   :clear left
@@ -141,11 +152,10 @@ p.quip
 h1.major
   :position absolute
   :top 90px
-  :right 110px
+  :right 0
   :font-size 2.4em
   :text-shadow #000 0 0 0
   :color #fff
-
 
 body.home
   #body-inner
@@ -211,11 +221,9 @@ body.archive
 
 .article
   h1
-    :font-size 1.8em
+    +big_white_heading
     :margin-top 2em
     :margin-bottom 0.5em
-    :color = !very_bright_text
-    
   .about
     h1
       :margin-top 0
@@ -301,3 +309,78 @@ body.archive
       :margin-bottom 10px
     
     @import views/stylesheets/code_highlighting.sass
+
+body.projects
+  ol.projects
+    > li
+      :margin-bottom 50px
+      :float left
+      :width 100%
+      
+      h1, p
+        :width 420px
+        :float right
+        :clear right
+
+      h1
+        +big_white_heading
+        :margin-bottom 0.5em
+      p
+        +standard_text_size
+        :margin-bottom 1em
+
+        &.link
+          a, a:active
+            +highlight_link
+            :float left
+
+          a:hover
+            +highlight_link_hover
+
+      .images
+        :width 320px
+          
+body.projects-js ol.projects > li
+  :position relative
+
+  .images
+    :position relative
+    :height 213px
+    li
+      :display inline
+    img
+      :display block
+      :position absolute
+      :top 0
+      :left 0
+  
+  .image-navigator
+    :height 10px
+    :position absolute
+    :bottom 5px
+    :right = 440-1+5px
+  
+    li
+      :display inline
+    a
+      :position relative
+      :display block
+      :float left
+      :width 9px
+      :height 9px
+      :text-indent -10000px
+      :margin-right 2px
+    
+      span
+        :position absolute
+        :top 0
+        :left 0
+        :width 100%
+        :height 100%
+        :background transparent url(/images/image-navigator-dots.png) -10px 0
+      
+      &.active span, &.active:hover span
+        :background-position 0 0
+    
+      &:hover span
+        :background-position -20px 0
