Added a heading with link to article pages. Removed text-shadow aliasing hacks. Style article blockquotes.

--- a/views/article.haml
+++ b/views/article.haml
@@ -26,3 +26,6 @@
         %p
           Next up:
           %a{:href => article_path(next_article)}== #{next_article.title}
+
+%h1.major
+  %a{:href => "/articles"} Articles
