Move the OpenID delegate only to the home page. Add copy to /projects. Change project's <h1>s to <h2>s.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -8,8 +8,9 @@
 
     %link{:href => versioned_stylesheet('screen'), :media => "screen", :rel => "stylesheet", :type => "text/css"}/
 
-    %link{:rel => "openid.server", :href => "http://www.myopenid.com/server"}/
-    %link{:rel => "openid.delegate", :href => "http://toolmantim.myopenid.com"}/
+    - if @show_open_id_delegate
+      %link{:rel => "openid.server", :href => "http://www.myopenid.com/server"}/
+      %link{:rel => "openid.delegate", :href => "http://toolmantim.myopenid.com"}/
 
   %body{:class => @body_class}
     #body-inner
