--- a/views/projects.haml
+++ b/views/projects.haml
@@ -4,14 +4,10 @@
 %h1.major Projects
 
 %ol.projects
-  %li
-    %h1 v2 of toolmantim.com
+  %li#toolmantim-09
+    %h2 toolmantim.com &lsquo;09
     %p
-      A long-due overhaul of this site, I revamped it from the ground up. A
-      new design, simpler file-based article publishing, removal of comments and
-      discussions and <a href="http://github.com/toolmantim/toolmantim">open-sourced code base</a>. <strong>Launched January 2009</strong>.
-    %p.link
-      %a{:href => "http://toolmantim.com/"} toolmantim.com &rarr;
+      The latest and long-overdue realignment of this site, my personal site, toolmantim.com. A refreshed design and backend rewrite. Source is available <a href="http://github.com/toolmantim/toolmantim">on github</a>. <strong>Launched January&nbsp;2009</strong>
     %ul.images
       %li
         %img{:src => "/images/project-placeholder-1.jpg", :width => "320", :height => "213", :alt => "toolmantim 1"}/
@@ -24,13 +20,10 @@
       %li
         %img{:src => "/images/project-placeholder-1.jpg", :width => "320", :height => "213", :alt => "toolmantim 5"}/
 
-  %li
-    %h1 Hello Canary
+  %li#hello-canary
+    %h2 Hello Canary
     %p
-      For my beautiful girlfriend&rsquo;s graphic design business, I
-      helped guide her design and executed it from photoshop to the
-      final product. I presented on "Static(ish) sites with nanoc and sinatra"
-      at the Sydney roro meetup shortly after explaining some of the Ruby I managed to sneak in.
+      A personal portfolio site for my girlfriend&rsquo;s graphic design business Hello Canary. A static site with a Sinatra mailer and a javascript CloudMachine. I gave a behind-the-scenes explanation titled <a href="/">Static(ish) sites with Nanoc and Sinatra</a> at the November Ruby on Rails Oceania Sydney meetup. <strong>Launched December&nbsp;2008</strong>
     %p.link
       %a{:href => "http://hellotherecanary.com/"} hellotherecanary.com &rarr;
     %ul.images
@@ -41,10 +34,10 @@
       %li
         %img{:src => "/images/project-placeholder-3.jpg", :width => "320", :height => "213", :alt => "hellocanary 3"}/
 
-  %li
-    %h1 What Would Myles Do
+  %li#wwmd
+    %h2 What Would Myles Do
     %p
-      A single-serving-site providing a direct tap into Myles&rsquo; brain.
+      A one-hour project developed and launched at <a href="http://www.osdc.com.au/">OSDC</a> 2008, WWMD is a <a href="http://isthisyourpaperonsingleservingsites.com/">single serving site</a> providing a direct tap into Myles Byrne&rsquo;s brain. Launched at the November Ruby on Rails Sydney meetup with the presentation <a href="/">Web Wired Meta Directions</a>. Source is available <a href="http://github.com/toolmantim/wwmd">on github</a> <strong>Launched December&nbsp;2008</strong>
     %p.link
       %a{:href => "http://whatwouldmylesdo.com/"} whatwouldmylesdo.com &rarr;
     %ul.images
@@ -55,15 +48,31 @@
       %li
         %img{:src => "/images/project-placeholder-3.jpg", :width => "320", :height => "213", :alt => ""}/
 
-  -# mobile v of webjam.com.au
-  -# voting system for webjam.com.au
-  -# iphone.news.com.au
+  %li#webjam-mobile
+    %h2 webjam.com.au mobile edition
+    %p
+      To accompany my presentation at Web Directions South 2008 <a href="http://www.webdirections.org/resources/pete-ottery-tim-lucas-developing-for-iphone/">Developing for the iPhone</a> this mobile 2.0 version of the webjam site was developed to serve as an example of best practice in design and integration. Source is available <a href="http://github.com/webjam/webjam">on github</a>. <strong>Launched September&nbsp;2008</strong>
+    %p.link
+      %a{:href => ""} webjam.com.au/home.mobile &rarr;
+    %ul.images
+      %li
+      %li
+        %img{:src => "/images/project-placeholder-1.jpg", :width => "320", :height => "213", :alt => ""}/
+      %li
+        %img{:src => "/images/project-placeholder-2.jpg", :width => "320", :height => "213", :alt => ""}/
+      %li
+        %img{:src => "/images/project-placeholder-3.jpg", :width => "320", :height => "213", :alt => ""}/
 
-  -# and if I could be fucked:
-    -# webjam.com.au
-    -# an.tisanta.com
-    -# iworkontheweb.com
-    -# trigger for RMIT
-    -# meetweaver.com
-    -# connections
-    -# web directions ticketing system
+  %li#iphone-news
+    %h2 iphone.news.com.au
+    %p
+      Working with <a href="http://c41.com.au/">Pete Ottery</a>, a fantastic  designer at News, we developed the the iPhone version of one of Australia&rsquo;s largest news sites: <a href="http://news.com.au/">news.com.au</a>. Many of the lessons learned were later integrated into the <a href="#webjam-mobile">mobile version of webjam.com.au</a>. <strong>Launched July&nbsp;2008</strong>
+    %p.link
+      %a{:href => ""} iphone.news.com.au
+    %ul.images
+      %li
+        %img{:src => "/images/project-placeholder-1.jpg", :width => "320", :height => "213", :alt => ""}/
+      %li
+        %img{:src => "/images/project-placeholder-2.jpg", :width => "320", :height => "213", :alt => ""}/
+      %li
+        %img{:src => "/images/project-placeholder-3.jpg", :width => "320", :height => "213", :alt => ""}/
