--- a/views/stylesheets/screen.sass
+++ b/views/stylesheets/screen.sass
@@ -315,16 +315,17 @@ body.archive
 body.projects
   ol.projects
     > li
-      :margin-bottom 50px
+      :padding-top 20px
+      :margin-bottom 30px
       :float left
       :width 100%
       
-      h1, p
+      h2, p
         :width 420px
         :float right
         :clear right
 
-      h1
+      h2
         +big_white_heading
         :margin-bottom 0.5em
       p
