--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,7 +4,8 @@
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}/
     %title= @page_title
     
-    %link{:href => "http://feeds.feedburner.com/toolmantim", :rel => "alternate", :title => "Recent articles", :type => "application/atom+xml"}/
+    %link{:rel => "alternate", :href => "http://feeds.feedburner.com/toolmantim", :title => "toolmantim.com articles", :type => "application/atom+xml"}/
+    %link{:rel => "shortcut icon", :href => "/favicon.ico"}/
 
     %link{:href => versioned_stylesheet('screen'), :media => "screen", :rel => "stylesheet", :type => "text/css"}/
 
