Finish the welcome article

--- a/views/article.haml
+++ b/views/article.haml
@@ -11,7 +11,7 @@
   .feedback
     %h1 Feedback and discussion
     %p
-      For errors, updates or feedback please shoot an email to <span class="email">t.lucas@#{thisdomain}</span>. Discussion, along with the old comments, will return shortly.
+      For errors, updates or feedback please shoot an email to <span class="email">t.lucas@#{thisdomain}</span>. There&rsquo;s no place for discussion (yet)&mdash;see <a href="http://toolmantim.com/articles/refreshed-realigned-and-ready-for-09#comments-and-discussion">my notes</a> and drop me a line if you&rsquo;ve got any ideas.
 
   - previous_article, next_article = previous_article(@article), next_article(@article)
 
